[package]
name = "wasm_test"
version = "0.1.0"
authors = ["lowlighter"]
edition = "2021"
description = "WASM testing project"
repository = "https://github.com/lowlighter/libs"
license = "MIT"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]
